# EMP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/emp/: emp
include/emp/circuits/: batcher.h  bit.h  circuit_file.h  circuits  comparable.h  float.hpp  integer.hpp
include/emp/garble/: garble  garble_gate_standard.h
include/emp/gc/: backend.h  circuit_file_generator.h  circuit_generator.h  garble_circuit.h  gc  halfgate_eva.h  halfgate_gen.h  privacy_free_eva.h  privacy_free_gen.h
include/emp/io/: io  io_channel.h
include/emp/ot/: iterated.h  mallicious-ot.h  mextension_alsz.h  mextension_kos.h  ot  ot.h
include/emp/utils/: fmemopen.h  prg.h  prp.h  utils
src/: CMakeLists.txt  main.cpp
src/emp/: CMakeLists.txt
src/emp/gc/: CMakeLists.txt  backend.cpp
src/emp/utils/: CMakeLists.txt  fmemopen.c
