cmake_minimum_required (VERSION 2.8.11)
project (EMP)
set(CMAKE_C_FLAGS "-pthread -Wall -march=native -O3 -maes")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11")
set(OPENSSL_ROOT_DIR "/usr/local/opt/openssl")
find_package(OPENSSL)
INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
include_directories(include)
add_subdirectory(src)
#add_subdirectory(relic)
